--- a/TaskManagerBackend/.env
+++ b/TaskManagerBackend/.env
@@ -1,4 +1,4 @@
-PORT=8000
-MONGO_URI=mongodb+srv://mashuknp:mashuknp@cluster0.jm5ikx6.mongodb.net/
-JWT_SECRET_KEY=mashuknp
-DB_NAME=mydb1
+PORT=Your_Port
+MONGO_URI=Your_MongoDB_URL
+JWT_SECRET_KEY=Your_JWT_Key
+DB_NAME=Your_Databases dame
